# transaction-lm-fine-tuning

./: .gitignore  README.md  pyproject.toml
src/dataset/: analyze.ipynb  process.ipynb  upload.ipynb  upload.py
src/models/: utils.py
src/models/gemma_3_1b_causal/: fine_tune.ipynb
src/models/gemma_3_1b_causal_lora/: evaluate.ipynb  evaluate_explore.ipynb  fine_tune.ipynb  identify_best_learning_rate.py
src/models/gemma_3_1b_pt_causal_lora/: fine_tune.py  identify_best_prompt.py
src/models/gpt_1_causal/: evaluate.ipynb  fine_tune.ipynb
src/models/gpt_1_sequence_classification/: evaluate.ipynb  fine_tune.ipynb
src/models/notebooks/: gpt_1.ipynb
src/models/test/: gpt_1_causal_finetune_eval.py
src/models/train/: gpt_1_causal_finetune.py
src/notes/: exploring_fine_tuning_memory_cost.py
src/shared/: config.py
