[project]
name = "transaction-lm-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "jupyter>=1.1.1",
]
