[project]
name = "transaction-lm-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.0",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pydantic-settings>=2.8.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "nbqa>=1.9.1",
]

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
remove_redundant_aliases = true
